@@ -3,33 +3,23 @@ package net.minestom.server.network.socket;
 import net.minestom.server.MinecraftServer;
 import net.minestom.server.ServerFlag;
 import net.minestom.server.network.packet.PacketParser;
+import net.minestom.server.network.player.PlayerSocketConnection;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.net.*;
-import java.nio.channels.SelectionKey;
-import java.nio.channels.Selector;
 import java.nio.channels.ServerSocketChannel;
 import java.nio.channels.SocketChannel;
 import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.List;
 
 public final class Server {
-
-    private static final Logger LOGGER = LoggerFactory.getLogger(Server.class);
 
     public static final boolean NO_DELAY = true;
 
     private volatile boolean stop;
 
-    private final Selector selector = Selector.open();
     private final PacketParser.Client packetParser;
-    private final List<Worker> workers;
-    private int index;
 
     private ServerSocketChannel serverSocket;
     private SocketAddress socketAddress;
@@ -38,9 +28,6 @@ public final class Server {
 
     public Server(PacketParser.Client packetParser) throws IOException {
         this.packetParser = packetParser;
-        Worker[] workers = new Worker[ServerFlag.WORKER_COUNT];
-        Arrays.setAll(workers, value -> new Worker(this));
-        this.workers = List.of(workers);
     }
 
     @ApiStatus.Internal
@@ -60,8 +47,6 @@ public final class Server {
 
         ServerSocketChannel server = ServerSocketChannel.open(family);
         server.bind(address);
-        server.configureBlocking(false);
-        server.register(selector, SelectionKey.OP_ACCEPT);
         this.serverSocket = server;
         this.socketAddress = address;
 
@@ -72,31 +57,67 @@ public final class Server {
 
     @ApiStatus.Internal
     public void start() {
-        this.workers.forEach(Thread::start);
-        new Thread(() -> {
+        Thread.startVirtualThread(() -> {
             while (!stop) {
-                // Busy wait for connections
                 try {
-                    this.selector.select(key -> {
-                        if (!key.isAcceptable()) return;
-                        try {
-                            // Register socket and forward to thread
-                            Worker worker = findWorker();
-                            final SocketChannel client = serverSocket.accept();
-                            worker.receiveConnection(client);
-                        } catch (IOException e) {
-                            e.printStackTrace();
-                        }
-                    });
+                    final SocketChannel client = serverSocket.accept();
+                    configureSocket(client);
+                    PlayerSocketConnection connection = new PlayerSocketConnection(client, client.getRemoteAddress());
+                    Thread.startVirtualThread(() -> playerReadLoop(connection));
+                    Thread.startVirtualThread(() -> playerWriteLoop(connection));
                 } catch (IOException e) {
-                    MinecraftServer.getExceptionManager().handleException(e);
+                    throw new RuntimeException(e);
                 }
             }
-        }, "Ms-entrypoint").start();
+        });
     }
 
-    public void tick() {
-        this.workers.forEach(Worker::tick);
+    private void configureSocket(SocketChannel channel) throws IOException {
+        if (channel.getLocalAddress() instanceof InetSocketAddress) {
+            Socket socket = channel.socket();
+            socket.setSendBufferSize(ServerFlag.SOCKET_SEND_BUFFER_SIZE);
+            socket.setReceiveBufferSize(ServerFlag.SOCKET_RECEIVE_BUFFER_SIZE);
+            socket.setTcpNoDelay(Server.NO_DELAY);
+            socket.setSoTimeout(30 * 1000); // 30 seconds
+        }
+    }
+
+    private void playerReadLoop(PlayerSocketConnection connection) {
+        while (!stop) {
+            try {
+                // Read & process packets
+                connection.read(packetParser);
+            } catch (IOException e) {
+                // TODO print exception? (should ignore disconnection)
+                connection.disconnect();
+                break;
+            } catch (Throwable t) {
+                MinecraftServer.getExceptionManager().handleException(t);
+                connection.disconnect();
+                break;
+            }
+        }
+    }
+
+    private void playerWriteLoop(PlayerSocketConnection connection) {
+        while (!stop) {
+            try {
+                connection.flushSync();
+            } catch (Exception e) {
+                connection.disconnect();
+                break;
+            }
+            if (!connection.isOnline()) {
+                try {
+                    connection.flushSync();
+                    connection.getChannel().close();
+                    break;
+                } catch (IOException e) {
+                    // Disconnect
+                    break;
+                }
+            }
+        }
     }
 
     public boolean isOpen() {
@@ -116,14 +137,6 @@ public final class Server {
         } catch (IOException e) {
             MinecraftServer.getExceptionManager().handleException(e);
         }
-        try {
-            this.selector.wakeup();
-            this.selector.close();
-        } catch (IOException e) {
-            LOGGER.error("Server socket selector could not be closed", e);
-            System.exit(-1);
-        }
-        this.workers.forEach(Worker::close);
     }
 
     @ApiStatus.Internal
@@ -141,10 +154,5 @@ public final class Server {
 
     public int getPort() {
         return port;
-    }
-
-    private Worker findWorker() {
-        this.index = ++index % ServerFlag.WORKER_COUNT;
-        return workers.get(index);
     }
 }
